--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -53,9 +53,9 @@
                 android:id="@+id/bScan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="@dimen/buttonHeightFromBottom"
+                android:layout_below="@id/tvRecent3"
+                android:layout_marginTop="@dimen/fieldSpacing"
                 android:backgroundTint="@color/bdRed"
                 android:text="SCAN QR-CODE"
                 android:textColor="@color/white"
