--- a/app/src/main/res/layout/activity_error.xml
+++ b/app/src/main/res/layout/activity_error.xml
@@ -47,12 +47,13 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/tvError"
-                android:text="Please check your internet connection and\npress TRY AGAIN below."
+                android:text="Please check your internet connection and press TRY AGAIN below."
                 android:textAlignment="center"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
 
             <ImageView
-                android:id="@+id/ivLoad"
+                android:id="@+id/ivError"
                 android:layout_width="220dp"
                 android:layout_height="180dp"
                 android:layout_below="@+id/tvErrorExplain"
@@ -65,9 +66,9 @@
                 android:id="@+id/bTryAgain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@id/ivError"
+                android:layout_marginTop="@dimen/fieldSpacing"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="@dimen/buttonHeightFromBottom"
                 android:backgroundTint="@color/bdRed"
                 android:text="TRY AGAIN"
                 android:textColor="@color/white"
