--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,18 +36,27 @@
                 android:id="@+id/rlWrapper"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="15dp"
+                android:padding="@dimen/sideMargin"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:padding="@dimen/sideMargin">
+                app:layout_constraintTop_toTopOf="parent">
 
+
+                <View
+                    android:id="@+id/filler"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp" />
 
                 <ImageView
                     android:id="@+id/ivBDLogo"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/logoHeight"
                     android:layout_alignParentLeft="true"
+                    android:layout_below="@id/filler"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginTop="20dp"
@@ -55,11 +64,12 @@
                     app:srcCompat="@drawable/bedrijvendagen_logo_kleur2" />
 
                 <TextView
-                    android:id="@+id/tvRecently"
+                    android:id="@+id/tvLogin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/ivBDLogo"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/fieldSpacing"
                     android:text="LOG IN HERE"
                     android:textColor="@color/bdRed"
                     android:textSize="24sp"
@@ -71,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_below="@+id/tvRecently"
+                    android:layout_below="@+id/tvLogin"
                     android:layout_marginTop="@dimen/fieldSpacing"
                     android:ems="10"
                     android:hint="E-mail address"
@@ -93,13 +103,14 @@
                     android:textColor="@android:color/black"
                     android:textSize="14sp" />
 
+
                 <Button
                     android:id="@+id/bLogin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/etPassword"
+                    android:layout_below="@id/etPassword"
+                    android:layout_marginTop="@dimen/fieldSpacing"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="21dp"
                     android:backgroundTint="@color/bdRed"
                     android:fitsSystemWindows="true"
                     android:text="Login"
@@ -112,21 +123,20 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/bLogin"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="13dp"
+                    android:layout_marginTop="@dimen/fieldSpacing"
                     android:text="Lost Password?"
                     android:textColor="@color/bdRed" />
 
-                <!--<RelativeLayout-->
-                <!--android:id="@+id/rlFields"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_alignParentLeft="true"-->
-                <!--android:layout_alignParentStart="true"-->
-                <!--android:layout_below="@+id/ivBDLogo"-->
-                <!--android:layout_marginLeft="@dimen/sideMargin"-->
-                <!--android:layout_marginRight="@dimen/sideMargin"-->
-                <!--android:layout_marginTop="30dp">-->
-                <!--</RelativeLayout>-->
+                <RelativeLayout
+                    android:id="@+id/rlFields"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/ivBDLogo"
+                    android:layout_marginLeft="@dimen/sideMargin"
+                    android:layout_marginRight="@dimen/sideMargin"
+                    android:layout_marginTop="30dp"></RelativeLayout>
             </RelativeLayout>
 
             <!--</android.support.constraint.ConstraintLayout>-->
