--- a/app/src/main/res/layout/activity_manual_input.xml
+++ b/app/src/main/res/layout/activity_manual_input.xml
@@ -59,7 +59,8 @@
                 android:layout_marginBottom="@dimen/fieldSpacing"
                 android:ems="10"
                 android:textColor="@android:color/black"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/etLastName"
@@ -72,15 +73,16 @@
                 android:ems="10"
                 android:textColor="@android:color/black"
 
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/bSaveEntry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="@dimen/buttonHeightFromBottom"
+                android:layout_below="@id/etEmail"
+                android:layout_marginTop="@dimen/fieldSpacing"
                 android:backgroundTint="@color/bdRed"
                 android:text="SAVE ENTRY"
                 android:textColor="@color/white"
