--- a/app/src/main/res/layout/activity_manual_input.xml
+++ b/app/src/main/res/layout/activity_manual_input.xml
@@ -24,6 +24,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginTop="20dp"
             android:contentDescription="Bedrijvendagen Logo"
+            android:visibility="visible"
             app:srcCompat="@drawable/bedrijvendagen_logo_kleur2" />
 
         <RelativeLayout
@@ -37,19 +38,26 @@
             android:layout_marginRight="@dimen/sideMargin"
             android:layout_marginTop="30dp">
 
+            <View
+                android:id="@+id/filler"
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:visibility="invisible" />
+
             <TextView
                 android:id="@+id/tvManualInput"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
+                android:layout_below="@id/filler"
                 android:text="MANUAL INPUT"
                 android:layout_marginBottom="@dimen/fieldSpacing"
                 android:textColor="@color/bdRed"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
-            <TextView
+            <EditText
                 android:id="@+id/etFirstName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,11 +66,13 @@
                 android:layout_below="@+id/tvManualInput"
                 android:layout_marginBottom="@dimen/fieldSpacing"
                 android:ems="10"
+                android:hint="First name"
+                android:inputType="textPersonName"
                 android:textColor="@android:color/black"
                 android:textSize="14sp"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
-            <TextView
+            <EditText
                 android:id="@+id/etLastName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -71,10 +81,12 @@
                 android:layout_below="@+id/etFirstName"
                 android:layout_marginBottom="@dimen/fieldSpacing"
                 android:ems="10"
-                android:textColor="@android:color/black"
+                android:hint="Last name"
 
+                android:inputType="textPersonName"
+                android:textColor="@android:color/black"
                 android:textSize="14sp"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <Button
                 android:id="@+id/bSaveEntry"
