Keyboard disappears on touch.

--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -20,6 +20,9 @@
             android:id="@+id/svCamera"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_alignBottom="@+id/bManualInput"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="37dp"
             android:visibility="visible" />
 
         <ImageView
