--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,9 +19,8 @@
             android:id="@+id/ivBDLogo"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/logoHeight"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
+            android:layout_below="@+id/tvCompany"
             android:layout_marginTop="20dp"
             android:contentDescription="Bedrijvendagen Logo"
             app:srcCompat="@drawable/bedrijvendagen_logo_kleur2" />
@@ -90,7 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvRecent1"
-                android:layout_marginTop="@dimen/fieldSpacing"
+                android:layout_marginTop="@dimen/recentNameSpacing"
                 android:layout_centerHorizontal="true"
                 android:text="Student 2"
                 android:textAlignment="center" />
@@ -100,7 +99,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvRecent2"
-                android:layout_marginTop="@dimen/fieldSpacing"
+                android:layout_marginTop="@dimen/recentNameSpacing"
                 android:layout_centerHorizontal="true"
                 android:text="Student 3"
                 android:textAlignment="center" />
