--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,16 +6,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/ivBubbles"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:adjustViewBounds="false"
-        android:contentDescription="Bubble background"
-        android:cropToPadding="false"
-        android:scaleType="centerCrop"
-        android:visibility="visible"
-        app:srcCompat="@drawable/bubbles" />
+    <!--<ImageView-->
+    <!--android:id="@+id/ivBubbles"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:adjustViewBounds="false"-->
+    <!--android:contentDescription="Bubble background"-->
+    <!--android:cropToPadding="false"-->
+    <!--android:scaleType="centerCrop"-->
+    <!--android:visibility="visible"-->
+    <!--app:srcCompat="@drawable/bubbles" />-->
 
     <ImageView
         android:id="@+id/ivFooter"
@@ -66,8 +66,8 @@
                     android:id="@+id/ivBDLogo"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/logoHeight"
+                    android:layout_centerHorizontal="true"
                     android:layout_alignParentTop="true"
-                    android:layout_alignStart="@+id/tvLogin"
                     android:contentDescription="Bedrijvendagen Logo"
                     app:srcCompat="@drawable/bedrijvendagen_logo_kleur2" />
 
@@ -134,7 +134,8 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/fieldSpacing"
                     android:text="Lost Password?"
-                    android:textColor="@color/bdRed" />
+                    android:textColor="@color/bdRed"
+                    android:textStyle="italic" />
 
                 <RelativeLayout
                     android:id="@+id/rlFields"
