--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="buttonHeightFromBottom">120dp</dimen>
     <dimen name="topFieldsMargin">8dp</dimen>
     <dimen name="hintPadding">8dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
